--- a/public/main.css
+++ b/public/main.css
@@ -66,6 +66,33 @@ h3 {
 }
 
 
+.chatCard{
+
+
+
+}
+
+.chatCard .avatar{
+
+  border-radius: 500px 500px 500px 500px;
+    border: 5px solid white;
+    width: 10%;
+
+
+}
+.chatleftCard{
+
+
+}
+
+.chatrightCard{
+  
+
+}
+
+
+
+
 .back-to-top{
   font-weight: bold;
   text-decoration: none;
